--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
+python-multipart==0.0.6
+anthropic==0.59.0
 pymongo==4.6.0
+redis==5.0.1
 python-dotenv==1.0.0
-anthropic>=0.25.0
-requests==2.31.0
-# redis>=5.0.1  # Optional: Uncomment if you want Redis support
-jsonschema==4.20.0
-pydantic==2.5.0
-python-multipart==0.0.6 
+Pillow==10.1.0
+playwright==1.40.0
+aiofiles==23.2.1 
